# heuristic_yield_websearch

./: .gitignore  README.md  config.example.mini.yml  config.example.yml  entari.example.yml  pyproject.toml
.github/workflows/: workflow.yml
core/: __init__.py  __main__.py  _optional.py  cli.py  codex_transport.py  config.py  entari.py  entari_plugin_hyw.py  jina_common.py  main.py  prompt.py  prompts.py  render.py  render_non_browser.py  search_ddgs.py  search_document.py  search_jina_ai.py  tool_view.py  web_runtime.py  web_search.py
core/xml_tools/web_search/: __init__.py  runtime.py  server.py
core/xml_tools/web_search/_public/: __init__.py
core/xml_tools/web_search/_public/browser/: __init__.py  landing.html  manager.py  renderer.py  service.py
core/xml_tools/web_search/_public/browser/assets/card-dist/: index.html
core/xml_tools/web_search/_public/browser/card-ui/: index.html  package-lock.json  package.json
core/xml_tools/web_search/_public/browser/card-ui/src/: App.vue  types.ts
core/xml_tools/web_search/_public/browser/card-ui/src/components/: MarkdownContent.vue
core/xml_tools/web_search/_public/crawling/: __init__.py  completeness.py  models.py
core/xml_tools/web_search/_public/search/: __init__.py  base.py  engine.py  service.py
dev.entari/: README.md
docs/: README_en.md  README_zh.md
entari_plugin_hyw/: __init__.py  __init__.py.bak  entari_misc.py
hyw/: __init__.py  __main__.py  _launcher.py  entari_cli.py
scripts/: extract_page_skeleton_samples.py
tests/: test_cli_render.py  test_codex_transport.py  test_config.py  test_context_memory.py  test_main_phase_flow.py  test_search_backends.py  test_tool_view.py
