[project]
name = "hyw"
version = "0.0.1"
description = "Heuristic Yield Websearch - LLM-powered web search assistant"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "litellm",
    "pyyaml",
    "loguru",
    "rich",
    "prompt-toolkit",
    "ddgs",
    "httpx",
    "markdown",
    "Pygments",
    "matplotlib",
    "weasyprint",
    "PyMuPDF",
    "Pillow",
]

[project.optional-dependencies]
entari = [
    "arclet-alconna",
    "arclet-entari",
]

[dependency-groups]
dev = [
    "arclet.entari[yaml,cron,dotenv] >= 0.17.1",
    "entari-plugin-server>=0.6.2",
    "satori-python-adapter-onebot11>=0.4.2",
    "ddgs",
    "Pygments",
    "matplotlib",
    "weasyprint",
    "PyMuPDF",
    "Pillow",
    "markdown",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/kumoSleeping/heuristic_yield_websearch"
Repository = "https://github.com/kumoSleeping/heuristic_yield_websearch"
Issues = "https://github.com/kumoSleeping/heuristic_yield_websearch/issues"

[project.scripts]
hyw = "hyw._launcher:main"
entari = "hyw.entari_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "hyw", "entari_plugin_hyw"]
